# bc6h-integrator

./: .clang-format  CMakeLists.txt  README.md  benchmark.sh
cmake/: shaders.cmake
src/: analytic_vector_field.glsl  application.cpp  application.hpp  command_parser.cpp  command_parser.hpp  compute.comp  data_source.cpp  data_source.hpp  dataset.cpp  dataset.hpp  dataset_view.cpp  dataset_view.frag  dataset_view.glsl  dataset_view.hpp  dataset_view_analytic.frag  dataset_view_image.frag  debug.frag  debug.vert  imfilebrowser.hpp  integrate.comp  integrate_analytic.comp  integrate_bc6h.comp  integrate_raw.comp  integration.glsl  integrator.cpp  integrator.hpp  lines.frag  lines.vert  main.cpp  queues.hpp  seeding.comp  spawn_seeds.comp  time_slices.hpp
